--- a/teams/conda-incubator/conda-plugins.yml
+++ b/teams/conda-incubator/conda-plugins.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/conda-plugins
+name: conda-plugins
 description: Maintainers of `conda-plugins`
 charter:
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda-incubator/conda-plugins
+  repos:
     - conda-incubator/conda-plugins
   other:
 links:
