--- a/teams/conda-incubator/conda-sh.yml
+++ b/teams/conda-incubator/conda-sh.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/conda-sh
+name: conda-sh
 description: Maintainers of the conda.sh website
 charter:
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda-incubator/conda-sh
+  repos:
     - conda-incubator/conda.sh
   other:
 links:
