--- a/teams/conda/conda-maintainers-project-management.yml
+++ b/teams/conda/conda-maintainers-project-management.yml
@@ -1,11 +1,13 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda/conda-maintainers-project-management
+name: conda-maintainers-project-management
 description: Support team for @conda/conda-maintainers, with triage permissions 
   only
 charter: dynamic
 requirements:
-scopes:
-  codeowners: []
+resources:
+  teams:
+    - conda/conda-maintainers-project-management
+  repos: []
   other:
 links:
 members:
