--- a/teams/conda-incubator/ceps.yml
+++ b/teams/conda-incubator/ceps.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/ceps
+name: ceps
 description: Deprecated.
 charter:
 requirements:
-scopes:
-  codeowners: []
+resources:
+  teams:
+    - conda-incubator/ceps
+  repos: []
   other:
 links:
 members:
