--- a/teams/conda-incubator/conda-libmamba-solver.yml
+++ b/teams/conda-incubator/conda-libmamba-solver.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/conda-libmamba-solver
+name: conda-libmamba-solver
 description: Maintainers of `conda-libmamba-solver`
 charter:
 requirements:
-scopes:
-  codeowners: []
+resources:
+  teams:
+    - conda-incubator/conda-libmamba-solver
+  repos: []
   other:
 links:
   - https://github.com/conda/conda/issues/15166
