--- a/teams/conda-incubator/condastats.yml
+++ b/teams/conda-incubator/condastats.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/condastats
+name: condastats
 description: Maintainers of `condastats`
 charter:
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda-incubator/condastats
+  repos:
     - conda-incubator/condastats
   other:
 links:
