--- a/teams/conda-incubator/hatch-conda-build.yml
+++ b/teams/conda-incubator/hatch-conda-build.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda-incubator/hatch-conda-build
+name: hatch-conda-build
 description: Maintainers of the `hatch-conda-build` plugin
 charter:
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda-incubator/hatch-conda-build
+  repos:
     - conda-incubator/hatch-conda-build
   other:
 links:
