--- a/teams/conda/conda-core.yml
+++ b/teams/conda/conda-core.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda/conda-core
+name: conda-core
 description:
 charter:
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda/conda-core
+  repos:
     - conda/menuinst
     - conda/pycosat
     - conda/conda-build
