--- a/teams/conda/conda-index.yml
+++ b/teams/conda/conda-index.yml
@@ -1,10 +1,12 @@
 # yaml-language-server: $schema=../teams.schema.json
-name: conda/conda-index
+name: conda-index
 description: Maintainers of conda-index
 charter: project
 requirements:
-scopes:
-  codeowners:
+resources:
+  teams:
+    - conda/conda-index
+  repos:
     - conda/conda-index
   other:
 links:
