--- a/teams/build-tools.yml
+++ b/teams/build-tools.yml
@@ -1,3 +1,6 @@
+# NOTE: This file is a work in progress.
+# The information here reflected is provisional
+# and must not be interpreted as the ground truth.
 # yaml-language-server: $schema=./teams.schema.json
 name: build-tools
 description: Team to work on conda-build and other build tools in the conda ecosystem
