--- a/teams/conda-dot-org.yml
+++ b/teams/conda-dot-org.yml
@@ -1,3 +1,6 @@
+# NOTE: This file is a work in progress.
+# The information here reflected is provisional
+# and must not be interpreted as the ground truth.
 # yaml-language-server: $schema=./teams.schema.json
 name: conda-dot-org
 description: Team responsible for the conda.org website maintenance
