--- a/teams/conda-libmamba-solver.yml
+++ b/teams/conda-libmamba-solver.yml
@@ -1,3 +1,6 @@
+# NOTE: This file is a work in progress.
+# The information here reflected is provisional
+# and must not be interpreted as the ground truth.
 # yaml-language-server: $schema=./teams.schema.json
 name: conda-libmamba-solver
 description: Maintainers of `conda-libmamba-solver`
