--- a/teams/steering-council.yml
+++ b/teams/steering-council.yml
@@ -1,3 +1,6 @@
+# NOTE: This file is a work in progress.
+# The information here reflected is provisional
+# and must not be interpreted as the ground truth.
 # yaml-language-server: $schema=./teams.schema.json
 name: steering-council
 description: Steering council of the conda ecosystem
