--- a/.github/workflows/meeting-notes.yml
+++ b/.github/workflows/meeting-notes.yml
@@ -27,7 +27,7 @@ permissions:
 jobs:
   create:
     if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
-    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/create-meeting-notes-pr.yml@ba471169f1eb702fc0861a227ce0b232ff5e7149 # @main
+    uses: ./.github/workflows/_create-meeting-notes-pr.yml
     with:
       date: ${{ github.event_name == 'schedule' && 'next Wednesday' || (inputs.date || 'now') }}
       template_path: meetings/agenda_template.md
@@ -43,7 +43,7 @@ jobs:
 
   sync:
     if: github.event.label.name == 'sync-hackmd-notes'
-    uses: Quansight-Labs/hackmd-meeting-notes-action/.github/workflows/sync-meeting-notes-pr.yml@ba471169f1eb702fc0861a227ce0b232ff5e7149 # @main
+    uses: ./.github/workflows/_sync-meeting-notes-pr.yml
     with:
       pr_number: ${{ github.event.number }}
       hackmd_team: conda-community
