--- a/.github/workflows/_sync-meeting-notes-pr.yml
+++ b/.github/workflows/_sync-meeting-notes-pr.yml
@@ -40,7 +40,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@83679a892e2d95755f2dac6acb0bfd1e9ac5d548 # v6.1.0
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       - name: Set up dependencies
         run: |
           python3 -V
@@ -104,7 +104,7 @@ jobs:
           set -x
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
-          
+
           git status
           if ! git diff --exit-code "$DOCPATH"; then
             git add "$DOCPATH"
