Sync team member lists with GitHub organization
Update team YAML files to match actual GitHub team membership:

- builds-tools: Move travishathaway to emeritus
- communications: Add dashagurova to members
- constructor: Add lrandersson (#332), move mcg1969 to emeritus,
  remove stale "missing from team?" comment from hmaarrfk
- infrastructure: Add jaimergp to members

GitHub team changes still needed (tracked separately):
- coc-committee: Remove jezdez
- communications: Remove tnabtaf
- constructor: Add hmaarrfk

--- a/teams/communications.yml
+++ b/teams/communications.yml
@@ -16,6 +16,7 @@ scopes:
 links:
   - https://github.com/conda/governance/issues/53
 members:
+  dashagurova: # added to match GitHub team
   jaimergp: https://github.com/conda/governance/issues/81
   jezdez: https://github.com/conda/governance/issues/81
 emeritus:
