--- a/teams/constructor.yml
+++ b/teams/constructor.yml
@@ -17,14 +17,15 @@ members:
   bkreider: https://github.com/conda/governance/issues/53
   chenghlee: https://github.com/conda/governance/issues/53
   goanpeca: https://github.com/conda/governance/issues/53
-  hmaarrfk: https://github.com/conda/governance/issues/53 # missing from team?
+  hmaarrfk: https://github.com/conda/governance/issues/53
   hoechenberger: https://github.com/conda/governance/issues/53
   isuruf: https://github.com/conda/governance/issues/53
   jaimergp: https://github.com/conda/governance/issues/53
   jezdez: https://github.com/conda/governance/issues/53
   larsoner: https://github.com/conda/governance/issues/53
+  lrandersson: https://github.com/conda/governance/issues/332
   marcoesters: # missing record of decision?
-  mcg1969: https://github.com/conda/governance/issues/53 # missing from team?
   pseudoyim: https://github.com/conda/governance/issues/53
   travishathaway: # missing record of decision?
 emeritus:
+  mcg1969: https://github.com/conda/governance/issues/53
