Sync team member lists with current GitHub org membership
- build-tools: Move travishathaway to emeritus
- communications: Add dashagurova
- constructor: Add lrandersson (#332), move mcg1969 to emeritus
- infrastructure: Add jaimergp

GitHub team changes still needed:
- coc-committee: Remove jezdez
- communications: Remove tnabtaf
- constructor: Add hmaarrfk

--- a/teams/infrastructure.yml
+++ b/teams/infrastructure.yml
@@ -25,6 +25,7 @@ members:
   beckermr: https://github.com/conda/governance/issues/84
   chenghlee: # missing record of decision?
   dbast: https://github.com/conda/governance/issues/84
+  jaimergp: # added to match GitHub team
   jezdez: https://github.com/conda/governance/issues/84
   kenodegard: https://github.com/conda/governance/issues/84
 emeritus:
