--- a/teams/communications.yml
+++ b/teams/communications.yml
@@ -21,6 +21,7 @@ resources:
 links:
   - https://github.com/conda/governance/issues/53
 members:
+  dashagurova: # added to match GitHub team
   jaimergp: https://github.com/conda/governance/issues/81
   jezdez: https://github.com/conda/governance/issues/81
 emeritus:
