Also note permissive license recommendation

--- a/.github/ISSUE_TEMPLATE/incubation_request.yml
+++ b/.github/ISSUE_TEMPLATE/incubation_request.yml
@@ -42,7 +42,7 @@ body:
     id: license
     attributes:
       label: License
-      description: The OSI-approved license used by the project. BSD-family licenses are recommended.
+      description: The OSI-approved license used by the project. Permissive, BSD-family licenses are recommended.
       placeholder: e.g. BSD-3-Clause
     validations:
       required: true
